# flytekit-uv

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
flytekitplugins/uv/: __init__.py  image_builder.py
